--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
 	<modules>
 		<module>no-primitives</module>
+		<module>maven-plugin</module>
 	</modules>
 
 	<scm>
@@ -32,24 +33,6 @@
 					<source>1.6</source>
 					<target>1.6</target>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>com.github.github</groupId>
-				<artifactId>downloads-maven-plugin</artifactId>
-				<version>0.5</version>
-				<configuration>
-					<description>Release ${project.version} of ${project.name}</description>
-					<override>true</override>
-					<includeAttached>true</includeAttached>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>upload</goal>
-						</goals>
-						<phase>install</phase>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
