--- a/pom.xml
+++ b/pom.xml
@@ -2,22 +2,53 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
+
 	<groupId>com.github.stefanbirkner</groupId>
 	<artifactId>no-primitives-parent</artifactId>
 	<packaging>pom</packaging>
 	<version>0.1.0-SNAPSHOT</version>
+	
 	<name>Parent Project of No Primitives!</name>
-
+	<description>Generate wrapper classes for primitives. </description>
+	<url>http://stefanbirkner.github.com/no-primitives/</url>
+	<inceptionYear>2012</inceptionYear>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	
 	<modules>
 		<module>no-primitives</module>
 		<module>maven-plugin</module>
 	</modules>
+
+	<developers>
+		<developer>
+			<id>stefanbirkner</id>
+			<name>Stefan Birkner</name>
+			<email>mail@stefan-birkner.de</email>
+			<url>http://www.stefan-birkner.de</url>
+			<timezone>+1</timezone>
+		</developer>
+	</developers>
 
 	<scm>
 		<connection>scm:git:git://github.com/stefanbirkner/no-primitives.git</connection>
 		<developerConnection>scm:git:git@github.com:stefanbirkner/no-primitives.git</developerConnection>
 		<url>https://github.com/stefanbirkner/no-primitives/</url>
 	</scm>
+
+	<prerequisites>
+		<maven>2.2.0</maven>
+	</prerequisites>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -33,6 +64,38 @@
 					<source>1.6</source>
 					<target>1.6</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.4</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>downloads-maven-plugin</artifactId>
+				<version>0.5</version>
+				<configuration>
+					<description>Release ${project.version} of ${project.name}</description>
+					<override>true</override>
+					<includeAttached>true</includeAttached>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>upload</goal>
+						</goals>
+						<phase>install</phase>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
