--- a/no-primitives/pom.xml
+++ b/no-primitives/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.stefanbirkner</groupId>
 		<artifactId>no-primitives-parent</artifactId>
-		<version>0.2.0-SNAPSHOT</version>
+		<version>0.2.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>no-primitives</artifactId>
