--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>com.github.stefanbirkner</groupId>
 	<artifactId>no-primitives-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>0.2.0-SNAPSHOT</version>
+	<version>0.2.0</version>
 	
 	<name>Parent Project of No Primitives!</name>
 	<description>Generate wrapper classes for primitives. </description>
