--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.stefanbirkner</groupId>
 		<artifactId>no-primitives-parent</artifactId>
-		<version>0.2.0</version>
+		<version>0.3.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>no-primitives-maven-plugin</artifactId>
