--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
 	</parent>
 
 	<groupId>com.github.stefanbirkner</groupId>
-	<artifactId>no-primitives-parent</artifactId>
+	<artifactId>semantic-wrapper-parent</artifactId>
 	<packaging>pom</packaging>
 	<version>0.3.0-SNAPSHOT</version>
 	
-	<name>Parent Project of No Primitives!</name>
-	<description>Generate wrapper classes for primitives. </description>
-	<url>http://stefanbirkner.github.com/no-primitives/</url>
+	<name>Parent Project of Semantic Wrapper</name>
+	<description>Generate wrapper classes with semantics.</description>
+	<url>http://stefanbirkner.github.com/semantic-wrapper/</url>
 	<inceptionYear>2012</inceptionYear>
 	<licenses>
 		<license>
@@ -25,7 +25,7 @@
 	</licenses>
 	
 	<modules>
-		<module>no-primitives</module>
+		<module>semantic-wrapper</module>
 		<module>maven-plugin</module>
 	</modules>
 
@@ -40,9 +40,9 @@
 	</developers>
 
 	<scm>
-		<connection>scm:git:git://github.com/stefanbirkner/no-primitives.git</connection>
-		<developerConnection>scm:git:git@github.com:stefanbirkner/no-primitives.git</developerConnection>
-		<url>https://github.com/stefanbirkner/no-primitives/</url>
+		<connection>scm:git:git://github.com/stefanbirkner/semantic-wrapper.git</connection>
+		<developerConnection>scm:git:git@github.com:stefanbirkner/semantic-wrapper.git</developerConnection>
+		<url>https://github.com/stefanbirkner/semantic-wrapper/</url>
 	</scm>
 
 	<prerequisites>
