--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>com.github.stefanbirkner</groupId>
 	<artifactId>semantic-wrapper-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>0.3.0</version>
+	<version>0.4.0-SNAPSHOT</version>
 	
 	<name>Parent Project of Semantic Wrapper</name>
 	<description>Generate wrapper classes with semantics.</description>
