Add parse methods to classes which wrap parsable primitive types.
Example:
public class OrderNumber {
  ...

  public static OrderNumber parseOrderNumber(String text) {
    return ((text == null) || text.isEmpty())
      ? null : new OrderNumber(parseInt(text));
  }

--- a/semantic-wrapper/src/main/resources/com/github/stefanbirkner/semanticwrapper/generator/class.template
+++ b/semantic-wrapper/src/main/resources/com/github/stefanbirkner/semanticwrapper/generator/class.template
@@ -6,7 +6,7 @@ public class #wrapper {
 	public static #wrapper #fieldName(#basicTypeClass #fieldName) {
 		return (#fieldName == null) ? null : new #wrapper(#fieldName);
 	}
-
+#additionalClassMethods
 	public #wrapper(#basicTypeClass #fieldName) {
 		if (#fieldName == null)
 			throw new IllegalArgumentException("Cannot wrap null.");
