--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.stefanbirkner</groupId>
 		<artifactId>semantic-wrapper-parent</artifactId>
-		<version>0.4.0-SNAPSHOT</version>
+		<version>0.4.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>semantic-wrapper-maven-plugin</artifactId>
