Beautify created String wrapper classes.
The toString() method returns the wrapped string instead of calling toString() on it:

  @Override
  public String toString() {
    return wrappedString;
  }

--- a/semantic-wrapper/src/main/resources/com/github/stefanbirkner/semanticwrapper/generator/class.template
+++ b/semantic-wrapper/src/main/resources/com/github/stefanbirkner/semanticwrapper/generator/class.template
@@ -36,6 +36,6 @@ public class #wrapper {
 
 	@Override
 	public String toString() {
-		return #fieldName.toString();
+		return #toStringTerm;
 	}
 }
