--- a/semantic-wrapper/pom.xml
+++ b/semantic-wrapper/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.stefanbirkner</groupId>
 		<artifactId>semantic-wrapper-parent</artifactId>
-		<version>0.5.0</version>
+		<version>0.6.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>semantic-wrapper</artifactId>
