--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
 	<inceptionYear>2012</inceptionYear>
 	<licenses>
 		<license>
-			<name>Apache License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
+			<name>MIT License</name>
+			<url>http://opensource.org/licenses/MIT</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
