--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<artifactId>semantic-wrapper-parent</artifactId>
 	<packaging>pom</packaging>
 	<version>0.6.0-SNAPSHOT</version>
-	
+
 	<name>Parent Project of Semantic Wrapper</name>
 	<description>Generate wrapper classes with semantics.</description>
 	<url>http://stefanbirkner.github.com/semantic-wrapper/</url>
@@ -22,7 +22,7 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-	
+
 	<modules>
 		<module>semantic-wrapper</module>
 		<module>maven-plugin</module>
@@ -58,19 +58,19 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>[4.9,)</version>
+			<version>[4.12]</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-core</artifactId>
-			<version>[1.2,)</version>
+			<version>[1.3]</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-library</artifactId>
-			<version>[1.2,)</version>
+			<version>[1.3]</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
