--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.github.stefanbirkner</groupId>
         <artifactId>semantic-wrapper-parent</artifactId>
-        <version>0.6.0-SNAPSHOT</version>
+        <version>0.6.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>semantic-wrapper-maven-plugin</artifactId>
@@ -67,6 +67,11 @@
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
             <version>3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sonatype.plexus</groupId>
+            <artifactId>plexus-build-api</artifactId>
+            <version>0.0.7</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.plexus</groupId>
