Add Eclipse support.

--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -69,6 +69,11 @@
             <version>3.1</version>
         </dependency>
         <dependency>
+            <groupId>org.sonatype.plexus</groupId>
+            <artifactId>plexus-build-api</artifactId>
+            <version>0.0.7</version>
+        </dependency>
+        <dependency>
             <groupId>org.codehaus.plexus</groupId>
             <artifactId>plexus-utils</artifactId>
             <version>3.0.1</version>
