--- a/pom.xml
+++ b/pom.xml
@@ -1,77 +1,78 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>com.github.stefanbirkner</groupId>
-		<artifactId>lib-parent</artifactId>
-		<version>9</version>
-	</parent>
+    <parent>
+        <groupId>com.github.stefanbirkner</groupId>
+        <artifactId>lib-parent</artifactId>
+        <version>9</version>
+    </parent>
 
-	<artifactId>semantic-wrapper-parent</artifactId>
-	<packaging>pom</packaging>
-	<version>0.6.0-SNAPSHOT</version>
+    <artifactId>semantic-wrapper-parent</artifactId>
+    <packaging>pom</packaging>
+    <version>0.6.0-SNAPSHOT</version>
 
-	<name>Parent Project of Semantic Wrapper</name>
-	<description>Generate wrapper classes with semantics.</description>
-	<url>http://stefanbirkner.github.com/semantic-wrapper/</url>
-	<inceptionYear>2012</inceptionYear>
-	<licenses>
-		<license>
-			<name>MIT License</name>
-			<url>http://opensource.org/licenses/MIT</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
+    <name>Parent Project of Semantic Wrapper</name>
+    <description>Generate wrapper classes with semantics.</description>
+    <url>http://stefanbirkner.github.com/semantic-wrapper/</url>
+    <inceptionYear>2012</inceptionYear>
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
-	<modules>
-		<module>semantic-wrapper</module>
-		<module>maven-plugin</module>
-	</modules>
+    <modules>
+        <module>semantic-wrapper</module>
+        <module>maven-plugin</module>
+    </modules>
 
-	<developers>
-		<developer>
-			<id>stefanbirkner</id>
-			<name>Stefan Birkner</name>
-			<email>mail@stefan-birkner.de</email>
-			<url>http://www.stefan-birkner.de</url>
-			<timezone>+1</timezone>
-		</developer>
-	</developers>
+    <developers>
+        <developer>
+            <id>stefanbirkner</id>
+            <name>Stefan Birkner</name>
+            <email>mail@stefan-birkner.de</email>
+            <url>http://www.stefan-birkner.de</url>
+            <timezone>+1</timezone>
+        </developer>
+    </developers>
 
-	<scm>
-		<connection>scm:git:git://github.com/stefanbirkner/semantic-wrapper.git</connection>
-		<developerConnection>scm:git:git@github.com:stefanbirkner/semantic-wrapper.git</developerConnection>
-		<url>https://github.com/stefanbirkner/semantic-wrapper/</url>
-	</scm>
+    <scm>
+        <connection>scm:git:git://github.com/stefanbirkner/semantic-wrapper.git</connection>
+        <developerConnection>scm:git:git@github.com:stefanbirkner/semantic-wrapper.git</developerConnection>
+        <url>https://github.com/stefanbirkner/semantic-wrapper/</url>
+    </scm>
 
-	<prerequisites>
-		<maven>3.0.0</maven>
-	</prerequisites>
+    <prerequisites>
+        <maven>3.0.0</maven>
+    </prerequisites>
 
-	<properties>
-		<maven.compiler.source>1.7</maven.compiler.source>
-		<maven.compiler.target>1.7</maven.compiler.target>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+    <properties>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>[4.12]</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-core</artifactId>
-			<version>[1.3]</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-library</artifactId>
-			<version>[1.3]</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>[4.12]</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>[1.3]</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>[1.3]</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
